2004-05-11    <chromakode@llama>

	* fgdiag/lib/userinteraction.py (error): Added error() command

	* fgdiag/lib/test.py (GizmoTester.start_test): Trap DBConnectError and display
	useful data

	* fgdiag/lib/errors.py (DBConnectError): Added DBConnectError

	* fgdiag/lib/fgdb.py (connect): Raise exception when unable to
	connect to a database

	* fgdiag/lib/unittests/test_test.py (Module): Added preliminary
	unit test

2004-05-07    <chromakode@llama>

	* fgdiag/lib/prompts.py (prompt_for_id): Added catchall SQLError
	trap and ValueError (id is not integer) trap

	* fgdiag/lib/fgdb.py (_check_id, _id_equals): Added type checking
	for ids

	* fgdiag/lib/errors.py (SQLError): Added exception to enhance
	error trapping and sql debugging.

	* fgdiag/lib/exceptions.py: Changed name to "errors". Old name stepped on the python
	"exceptions" module.

	* fgdiag/lib/fgdb.py (TableRow): Moved code to verify a row's
	existence to the Table classes.

2004-05-05    <chromakode@llama>

	* fgdiag/pogotest.profile: Added profiling data for pogotest.py in pogotest.profile

	* fgdiag/lib/exceptions.py: Added central exception file.

2004-05-04  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/lib/pyutil.py (withPager): 1.2 don't use apply()

	* fgdiag/lib/test.py (TestableDevice): 1.13 some docstrings

	* fgdiag/testtester.py: 1.1 use getattr() instead of __dict__

2004-05-04    <chromakode@llama>

	* fgdiag/lib/prompts.py (prompt_for_id):  No longer needs fgdb for
	non-db stuff

2004-04-27  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/modem/modem.py (find_speed, get_serial_devices): 1.3 document
	return values.
	(main): 1.4 isapnp moved to fgdiag.lib.

2004-04-08  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/modem/test_modem.py (ResponseParser.test_find_speed): 1.1
	trap (and examine) output from find_speed.

	* fgdiag/modem/modem.py: 1.1 Removed definitions of False and True.
	(find_speed): 1.1 add outputFunc parameter, so that we can run tests
	on it without it spewing to stdout.
