@@ -1,5 +1,11 @@
 2004-05-11    <chromakode@llama>
 
+	* fgdiag/lib/test.py (Module): Modified to use debug
+
+	* fgdiag/lib/fgdb.py (Module): Modified to use debug
+
+	* fgdiag/lib/debug.py (Module): Added Logging Debug System
+
 	* fgdiag/lib/userinteraction.py (error): Added error() command
 
 	* fgdiag/lib/test.py (GizmoTester.start_test): Trap DBConnectError and display
